update call for content button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: 2020 Innovations in Travel Modeling Conference
             <h1>{{ site.event-title }}</h1>
             <p class="lead">{{ site.event-tagline }}</p>
             <h4><a href="http://eepurl.com/gup0yn"><i class="fas fa-envelope"></i>&nbspKeep up-to-date.<br/> Sign up for our email list</a></h4>
-            <a href="{{ site.baseurl }}/call-for-content"><button type="button" class="btn btn-primary">Call for Content: due June 30th</button></a>
+            <a href="{{ site.baseurl }}/call-for-content"><button type="button" class="btn btn-primary">Call for Content: processing and scoring in progress</button></a>
 
         </div>
     </div>
