--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Institutional structures and technology transfer in order to use the most approp
                         Sijia Wang, WSP<br>
                         Karthik Konduri, Amazon<br>
                         Xuesong Zhou, ASU<br>
-                        <a
+                        Brian Lee, PSRC<br>
                         <a href="http://www.trb.org">Transportation Research Board</a><br>
                         <a href="https://www.mytrb.org/OnlineDirectory/Committee/Details/3709">Standing Committee on the Travel Forecasting Resource (ADB45)</a><br>
                     </address>
