--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ title: 2020 Innovations in Travel Modeling Conference
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
+                <p> DISCLAIMER:  This site is UNOFFICIAL and is not maintained by TRB or its staff.  For official information  about the TRB Innovations in Travel Modeling Conference, please visit their conference website at <a href='http://www.cvent.com/events/trb-8th-innovations-in-travel-modeling-conference/event-summary-411292339ce9482b9caa1fc898fc1a9e.aspx'>http://www.cvent.com/events/trb-8th-innovations-in-travel-modeling-conference/event-summary-411292339ce9482b9caa1fc898fc1a9e.aspx</a>.</p>
                 <p class="lead"> The 2020 ITM Conference will focus on four themes the organizers believe are necessary to improve the state of travel forecasting:</p>
                     <h3> Data Solutions </h3>
                     <p class="lead">
@@ -124,13 +125,8 @@ Institutional structures and technology transfer in order to use the most approp
                 </p>
             </div>
             <div class="col-md-4">
-                <h3>Hackathons</h3>
-                <p> Something that needs fixing, content, and group think. Something that is relevant and important to the industry. Something that will offer learning and leadership opportunities to an expanded group of people.
-                </p>
-            </div>
-            <div class="col-md-4">
                 <h3>Workflow Panels</h3>
-                <p> A riff on a <a href='http://stackshare.io'>'stack share'</a> to share effective processes you use to get work done, and highlight gaps.
+                <p> A riff on a 'stack share'</a> to share effective processes you use to get work done, and highlight gaps.
                 </p>
             </div>
             <div class="col-md-4">
@@ -176,64 +172,10 @@ Institutional structures and technology transfer in order to use the most approp
                 </div>
             <!-- /row-->
             </div>
-            <div class="row">
-                {% for reg in site.data.registration %}
-                <div class="col-sm-4">
-                    <div class="pricing-table-default text-center">
-                        <div class="pricing-head">
-                            <h3>{{ reg.label }}</h3>
-                            <span class="price"><sup>$</sup>{{ reg.price }}</span>
-                        </div>
-                        <div class="pricing-detail">
-                            <ul class="pricing-list green-i">
-                            {% for note in reg.notes %}
-                                <li>{{ note }}</li>
-                            {% endfor %}
-                            </ul>
-                        </div>
-                        <a href="{{ reg.link }}" class="btn btn-primary">{{ reg.button }}</a>
-                    </div>
-                    <!-- /.pricing-table-wrapper -->
-                </div>
-                <!-- .col-sm-4 -->
-                {% endfor %}
-
-            </div>
-            <!-- /.row -->
         </div>
         <!-- /.container -->
     </section>
     <!-- .pricing-section -->
-
-
-    <section id="section-partner" class="section-wrapper client-logo">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="section-title">
-                        <h1>PARTNERS</h1>
-                    </div>
-                    <p><a href="http://www.cvent.com/events/trb-8th-innovations-in-travel-modeling-conference/custom-35-411292339ce9482b9caa1fc898fc1a9e.aspx">Register as a patron or exhibitor now!</a>  Space is limited</p>
-                </div>
-            </div>
-            {% for tier in site.data.sponsors %}
-            <div class="row">
-                    <h3>{{ tier.label }}</h3>
-                    {% for sponsor in tier.sponsors %}
-                        <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
-                            {% if sponsor.img %}
-                                <a href="{{ sponsor.link }}"><img src="{{ sponsor.img }}" alt="Image"></a>
-                            {% else %}
-                                <a href="{{ sponsor.link }}">{{ sponsor.name }}</a>
-                            {% endif %}
-                        </div>
-                    {% endfor %}
-            </div>
-             {% endfor %}
-        </div>
-        <!--end of .container -->
-    </section>
-    <!-- .client-logo -->
 
 
     <section id="section-venue" class="section-wrapper  gray-bg">
@@ -242,7 +184,7 @@ Institutional structures and technology transfer in order to use the most approp
                 <div class="col-md-12">
                     <div class="section-title">
                         <h1>VENUE</h1>
-                        <p>The 2020 ITM conference will be held at the brand new <a href="https://www.hyatt.com/en-US/hotel/washington/hyatt-regency-seattle/sears">Hyatt Regency Seattle</a> located at <a href="https://www.google.com/maps/place/Hyatt+Regency+Seattle/@47.6147059,-122.3361666,17z/data=!3m1!4b1!4m8!3m7!1s0x54906be04b660547:0xe43a49eea47700a4!5m2!4m1!1i2!8m2!3d47.6147059!4d-122.3339779">808 Howell Street Seattle WA</a></p>
+                        <p>The 2020 ITM conference will be held at the brand new Hyatt Regency Seattle located at <a href="https://www.google.com/maps/place/Hyatt+Regency+Seattle/@47.6147059,-122.3361666,17z/data=!3m1!4b1!4m8!3m7!1s0x54906be04b660547:0xe43a49eea47700a4!5m2!4m1!1i2!8m2!3d47.6147059!4d-122.3339779">808 Howell Street Seattle WA</a></p>
                         <p>The hotel is easily reachable from SeaTac International Airport via <a href="https://www.soundtransit.org/">LINK light rail<a>.</p>
                         <img src="https://assets.hyatt.com/content/dam/hyatt/hyattdam/images/2019/03/05/1018/Hyatt-Regency-Seattle-P107-Exterior.jpg/Hyatt-Regency-Seattle-P107-Exterior.16x9.jpg?imwidth=1280"  width=400></img>
                         <p>Room block information on the <a href="http://www.cvent.com/events/trb-8th-innovations-in-travel-modeling-conference/custom-17-411292339ce9482b9caa1fc898fc1a9e.aspx">TRB registration site</a></p>
